k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splitx
  labels:
    app.kubernetes.io/name: splitx
    app.kubernetes.io/part-of: splitx
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: splitx
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
